# qsign

./: .gitignore  CHANGELOG.md  QSign.spec  README.md  build_release.ps1  go.bat  go_debug.bat  pyproject.toml  requirements.txt  version.json
app/: __init__.py  main.py  pdf_viewer_controller.py  qsign_application.py
config/: __init__.py  app.yaml
docs/: STABILITY_AUDIT_PHASE2.md  architecture.md  decisions.md  document_intelligence.md  placement_engine.md  recognition_engine.md  roadmap.md  template_designer.md  template_engine.md
installer/: qsign-test.iss  qsign.iss
models/: __init__.py  document.py  pdf_document.py  template.py
services/: __init__.py
templates/: learned_autodemolizioni_khourcha_nadia_demolizione_autovetture_nomina_quale_medico.json  learned_bsnscreen_multitest_d2604015_paziente_fagnoli_emanuele_nascita_azienda.json  learned_certificato_vaccinale_vaccination_certificate_certifica_ciani_cnilcu03p05d704s_effettuato.json  learned_controllo_qualit_interpretazione_spirometria_normale_prova_parametri_score.json  learned_geminiano_radicchi_cervese_cesena_nomina_quale_medico_competente.json  learned_informativa_prevenzione_oncologica_data___________decreto_legge_sorveglianza_sanitaria.json  learned_modalit_consultazione_idoneit_referti_data___________corre_visualizzazione_necessario.json  learned_perticari_visita_medica_periodica_assenza_superiore_azienda_formificio.json  learned_perticari_visita_medica_periodica_azienda_societa_lavoratore_sesso.json  learned_perticari_visita_medica_periodica_azienda_technogym_lavoratore_sesso.json  (+5 more)
(+75 files in other folders)
