[build-system]
requires = ["setuptools>=77"]
build-backend = "setuptools.build_meta"

[project]
name = "qsign"
version = "0.1.0"
description = "Extensible document-signing platform"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "flet",
]

[project.scripts]
qsign = "app.main:run"

[tool.setuptools.packages.find]
where = ["."]
include = ["app*", "config*", "models*", "services*", "ui*"]

