[build-system]
requires = ["setuptools>=77"]
build-backend = "setuptools.build_meta"

[project]
name = "qsign"
version = "0.2.0"
description = "Extensible document-signing platform"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "flet",
    "pymupdf>=1.28,<1.29",
]

[project.scripts]
qsign = "app.main:run"

[tool.setuptools.packages.find]
where = ["."]
include = ["app*", "config*", "models*", "services*", "ui*"]
