[build-system]
requires = ["setuptools>=77"]
build-backend = "setuptools.build_meta"

[project]
name = "qsign"
version = "0.2.1"
description = "Extensible document-signing platform"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "flet==0.85.3",
    "flet-desktop==0.85.3",
    "pyHanko==0.35.2",
    "pymupdf==1.28.0",
]

[project.scripts]
qsign = "app.main:run"

[tool.setuptools.packages.find]
where = ["."]
include = ["app*", "config*", "models*", "services*", "ui*"]

[tool.setuptools.package-data]
config = ["app.yaml"]
